# OLD-gam-g4

./: .gitignore  CMakeLists.txt  G4UserSteppingBatchAction.h  GateAActor.h  GateAction.cpp  GateAction.h  GateSimulationStatisticsActor.cpp  GateSimulationStatisticsActor.h  GateTest2Actor.h  GateTestActor.cpp  GateTestActor.h  GateVActor.h  azure-pipelines.yml  g4_test1.cpp  g4_test5.cpp  g4_test6.cpp  g4_test7.cpp  g4_test8.cpp  g4_test9.cpp  gam_g4.cpp  geant4.cpp  pyG4Box.cpp  pyG4Event.cpp  pyG4GeometryManager.cpp  pyG4LogicalVolume.cpp  pyG4Material.cpp  pyG4NistManager.cpp  pyG4PVPlacement.cpp  pyG4ParticleDefinition.cpp  pyG4ParticleGun.cpp  pyG4ParticleTable.cpp  pyG4PhysListFactory.cpp  pyG4RotationMatrix.cpp  pyG4Run.cpp  pyG4RunManager.cpp  pyG4Step.cpp  pyG4String.cpp  pyG4ThreeVector.cpp  pyG4Track.cpp  pyG4UImanager.cpp  (+24 more)
.github/workflows/: Dockerfile_gam_g4  createWheelLinux.sh  main.yml  redoQt5LibsMac.py  save_actions
ci/: Dockerfile_gam_g4  azureCreateWheelLinux.sh  azureCreateWheelMac.yml
g4_bindings/: pyG4GeometryManager.cpp  pyG4LogicalVolume.cpp  pyG4MTRunManager.cpp  pyG4Material.cpp  pyG4NistManager.cpp  pyG4PVPlacement.cpp  pyG4ParticleDefinition.cpp  pyG4ParticleGun.cpp  pyG4ParticleTable.cpp  pyG4ProductionCutsTable.cpp  pyG4RotationMatrix.cpp  pyG4RunManager.cpp  pyG4Sphere.cpp  pyG4Step.cpp  pyG4StepPoint.cpp  pyG4String.cpp  pyG4ThreeVector.cpp  pyG4TouchableHistory.cpp  pyG4Track.cpp  pyG4UIExecutive.cpp  pyG4UImanager.cpp  pyG4UIsession.cpp  pyG4UnitsTable.cpp  pyG4UserEventAction.cpp  pyG4UserRunAction.cpp  pyG4UserSteppingAction.cpp  pyG4UserTrackingAction.cpp  pyG4VPhysicalVolume.cpp  pyG4VPrimaryGenerator.cpp  pyG4VPrimitiveScorer.cpp  pyG4VSolid.cpp  pyG4VSteppingVerbose.cpp  pyG4VUserActionInitialization.cpp  pyG4VUserDetectorConstruction.cpp  pyG4VUserPhysicsList.cpp  pyG4VUserPrimaryGeneratorAction.cpp  pyRandomize.cpp
gam_bindings/: GamDoseActor3.cpp  GateAActor.cpp  GateDoseActor.cpp  GateDoseActor.h  GateEventAction.h  GateTest2Actor.cpp  GateTestActor.h  GateUserSteppingAction.cpp  GateUserSteppingAction.h  GateVActor.cpp  declare_itk_image_py.h  pyGamDoseActor2.cpp  pyGamDoseActor3.cpp  pyGamVActorWithSteppingAction.cpp  pyGateDoseActor.cpp  pyGateSimulation.cpp  pyGateSimulationStatisticsActor.cpp
gam_g4/: g4DataSetup.py
gam_g4/g4_bindings/: pyG4Element.cpp  pyG4LogicalVolume.cpp  pyG4NistManager.cpp  pyG4RotationMatrix.cpp
gam_lib/: GamDoseActor3.h  GamSimulationStatisticsActor.h  GamVActorWithSteppingAction.h  pyGamSimulationStatisticsActor.cpp  pyGamTestProtonSource.cpp  pyGamVActor.cpp
